# HumanAnimalsCars

./: Adult.cpp  Adult.h  Animal.cpp  Animal.h  CMakeLists.txt  Car.cpp  Car.h  Child.cpp  Child.h  Enum.cpp  Enum.h  Freight.cpp  Freight.h  Home_animals.cpp  Home_animals.h  Human.cpp  Human.h  Light.cpp  Light.h  Wild.cpp  Wild.h  main.cpp
